--- a/.github/workflows/welcome.yml
+++ b/.github/workflows/welcome.yml
@@ -3,7 +3,7 @@ on:
   pull_request:
     types: [opened]
 permissions:
-  pull_requests: write
+  pull_request: write
 jobs:
   build:
     name: Post welcome comment
